Add material design.

--- a/example/src/components/Uploads/index.css
+++ b/example/src/components/Uploads/index.css
@@ -1,2 +1,10 @@
+.uploads {
+  width: 600px;
+  margin: 50px auto;
+  text-align: center;
+}
+input[type='file'] {
+  display: none;
+}
 .errorMessage {
 }
